# inish

./: .gitignore  AGENTS.md  justfile  mypy.ini  pyproject.toml  pyrightconfig.json  readme.md
.zed/: settings.json
common/: build-python.sh  build-sqlite.sh  check-python-version.py  fetch-and-build-sqlite.sh
inish/: __about__.py  __main__.py
inish/backblaze/: capabilities.py  creds.py  key.py  progress.py
inish/github/: __init__.py  __main__.py
inish/service/: __main__.py  activate.py  construct.py  deploy.py
inish_/: pyproject.toml
inish_/inish/backblaze/: creds.py  fmt_creds.py  key.py  store.py
linux/: create-service-user.bash
linux/fedora/: enable-automatic-updates.bash
linux/init/: disable-root-login.bash  enable-selinux.bash  setup-operator-user.bash  setup-root-user.bash  setup-ssh.bash
linux/src/: build-all.sh  build-litestream.sh  build-python.sh  build-sqlite.sh
linux/uv/: check-version.sh  install.bash  version.sh
linux/vector/: install.bash  setup.bash
mac/: set-hostname.sh
server/: create-service-user.bash
server/caddy/: add-security-attrs.bash  add-security-attrs.sh  install.bash  install.sh
server/fedora/: enable-automatic-updates.bash  enable-automatic-updates.sh
server/init/: delete-unwanted-users.bash  enable-selinux.bash  setup-operator-user.bash
server/src/: build-all.sh  build-litestream.sh  build-python.sh  build-sqlite.sh
server/vector/: install.bash  setup.bash
sh/: deps.sh
