[project]

name = "inish"
description = "Server initialization tools."

requires-python = ">=3.13"

dependencies = [
]

readme = "readme.md"

authors = [
  { name = "George King", email = "george@theorypractice.dev" },
]
dynamic = [
  "version",
]


[project.urls]
Issues = "https://github.com/gwk/inish/issues"
Source = "https://github.com/gwk/inish"
Documentation = "https://github.com/gwk/inish/blob/main/readme.md"


[project.scripts]


[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"


[tool.hatch.build]
include = [
  "inish/**/*",
]
exclude = [
  "inish/**/__pycache__/**/*",
]


[tool.hatch.version]
path = "inish/__about__.py"


[tool.isort]
atomic = true
combine_as_imports = true
default_section = "FIRSTPARTY"
indent = "  "
lines_after_imports = 2
lines_between_sections = 1
line_length = 128
multi_line_output = "HANGING_INDENT_WITH_PARENTHESES"
order_by_type = false
use_parentheses = true
