[project]

name = "inish"
description = "Server initialization tools."

requires-python = ">=3.14"

dependencies = []

readme = "readme.md"

authors = [
  { name = "George King", email = "george@theorypractice.dev" },
]
dynamic = [
  "version",
]


[project.urls]
Issues = "https://github.com/gwk/inish/issues"
Source = "https://github.com/gwk/inish"
Documentation = "https://github.com/gwk/inish/blob/main/readme.md"


[project.scripts]


[build-system]
requires = ["flit_core >= 3.12"]
build-backend = "flit_core.buildapi"
