[project]

name = "inish"
description = "Server initialization tools."

requires-python = ">=3.14"

dependencies = [
  "b2sdk >= 2.12.0",
  "pithy",
]

readme = "readme.md"

authors = [
  { name = "George King", email = "george@theorypractice.dev" },
]
dynamic = [
  "version",
]


[project.urls]
Issues = "https://github.com/gwk/inish/issues"
Source = "https://github.com/gwk/inish"
Documentation = "https://github.com/gwk/inish/blob/main/readme.md"


[project.scripts]


[dependency-groups]
dev = [
  "isort >= 8.0.1",
  "mypy >= 2.2.0",
  "pyflakes >= 3.4.0",
  "utest",
]


[tool.uv.workspace]
members = ["deps/pithy/pithy_", "deps/pithy/tolkien_", "deps/pithy/utest_"]


[tool.uv.sources]
# Locally developed packages are resolved from the worktree linked at deps/pithy, set up by sh/deps.sh; see readme.md.
pithy = { workspace = true }
tolkien = { workspace = true }
utest = { workspace = true }


[build-system]
requires = ["flit_core >= 3.12"]
build-backend = "flit_core.buildapi"
