[project]

name = "inish"
description = "Server initialization tools."

requires-python = ">=3.14"

dependencies = [
  "b2sdk >= 2.12.0",
  "pithy",
]

readme = "readme.md"

authors = [
  { name = "George King", email = "george@theorypractice.dev" },
]
dynamic = [
  "version",
]


[project.urls]
Issues = "https://github.com/gwk/inish/issues"
Source = "https://github.com/gwk/inish"
Documentation = "https://github.com/gwk/inish/blob/main/readme.md"


[project.scripts]


[tool.uv.sources]
# pithy is resolved from the enclosing workspace: this repo's root when developing here,
# or a dependent repo's workspace when this package is consumed as a member (e.g. deps/inish/inish_).
pithy = { workspace = true }


[build-system]
requires = ["flit_core >= 3.12"]
build-backend = "flit_core.buildapi"
